refactor: specialization attribute in user
