# doc/api.yml
@@ -1866,7 +1866,7 @@ components:
               format: date-time
             status:
               $ref: '#/components/schemas/EnableStatus'
-    SpecializationChannel:
+    SpecializationField:
       type: string
       enum:
         - COMMON_CORE
@@ -1920,8 +1920,8 @@ components:
         - $ref: '#/components/schemas/User'
         - type: object
           properties:
-            specialization_channel:
-              $ref: '#/components/schemas/SpecializationChannel'
+            specialization_field:
+              $ref: '#/components/schemas/SpecializationField'
     Teacher:
       allOf:
         - $ref: '#/components/schemas/User'
